--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </a>
             <ul class="links">
                 <span class="close-btn material-symbols-rounded">close</span>
-                <li><a href="#">Food</a></li>
-                <li><a href="#">Recipes</a></li>
+                <li><a href="foodAPI.html">Food</a></li>
+                <li><a href="recipeAPI.html">Recipes</a></li>
                 <li><a href="caloriecounter.html">Calorie Calculator</a></li>
             <li><a href="aboutus.html">About us</a></li>
                 <li><a href="#">Contact us</a></li>
@@ -34,8 +34,6 @@
         <span class="close-btn material-symbols-rounded">close</span>
         <div class="form-box login">
             <div class="form-details">
-                <h2>Welcome Back To CalorieTracker</h2>
-                <p>Please log in using your personal information to stay connected with us.</p>
             </div>
             <div class="form-content">
                 <h2>LOGIN</h2>
@@ -59,8 +57,6 @@
         </div>
         <div class="form-box signup">
             <div class="form-details">
-                <h2>Create Account</h2>
-                <p>To become a part of our community, please sign up using your personal information.</p>
             </div>
             <div class="form-content">
                 <h2>SIGNUP</h2>
