--- a/foodAPI.html
+++ b/foodAPI.html
@@ -8,46 +8,99 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-    height: 100vh;
-    width: 100%;
-    background: url("background.jpg") center/cover no-repeat;
-}
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      margin: 0;
+      overflow: hidden;
+      position: relative;
+    }
 
+    video {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      background-size: cover;
+    }
 
     header {
       color: #fff;
       text-align: center;
       padding: 1rem 0;
+      background-color: #c21c1ced; /* Blue color, you can change it to any color you prefer */
+      width: 100%; /* Make the header full width */
+      position: relative;
+      z-index: 1;
     }
+
+    .btn-primary {
+      background-color: #c21c1ced; /* Same color as the header */
+      border-color: #00408575; /* Same border color as the background */
+    }
+
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 20px;
+      text-align: center; /* Center align text and elements inside container */
+      position: relative;
+      z-index: 1;
     }
+
+    .form-wrapper {
+      display: flex;
+      justify-content: center; /* Center the form horizontally */
+      width: 100%;
+      margin-top: 20px;
+    }
+
     .result {
       margin-top: 20px;
       background-color: #fff;
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 1;
     }
+
     .error {
       color: #dc3545;
       font-style: italic;
       margin-top: 20px;
+      position: relative;
+      z-index: 1;
     }
-    .smaller-heading {
-  font-size: 1.5rem; /* You can adjust the value as needed */
-}
 
+    .smaller-heading {
+      font-size: 1.5rem; /* You can adjust the value as needed */
+    }
+
+    .input-group {
+      width: 100%; /* Make the input group take full width */
+      max-width: 500px; /* Optional: limit the width of the input group */
+    }
   </style>
 </head>
 <body>
+  <video autoplay muted loop>
+    <source src="foodbackground.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
   <header>
     <h1>Search Foods</h1>
     <h2 class="smaller-heading">Search our entire food database</h2>
   </header>
-  <div class="container">
+  <div class="container form-wrapper">
     <form id="searchForm" class="form-inline">
       <div class="input-group mb-3">
         <input type="text" id="query" name="query" class="form-control" placeholder="Search for a food item">
@@ -56,7 +109,9 @@
         </div>
       </div>
     </form>
+  </div>
      
+  <div class="container">
     <div id="result" class="result" style="display: none;">
       <!-- Result will be displayed here -->
     </div>
@@ -66,7 +121,6 @@
   </div>
    
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 
   <!-- Bootstrap JS (optional, for some components) -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -111,44 +165,43 @@
     });
 
     function displayResult(data) {
-  const resultDiv = document.getElementById('result');
-  resultDiv.innerHTML = ''; // Clear previous results
+      const resultDiv = document.getElementById('result');
+      resultDiv.innerHTML = ''; // Clear previous results
 
-  // Check if data is an array and not empty
-  if (Array.isArray(data.items) && data.items.length > 0) {
-    // Assuming the first item in the array contains the relevant data
-    const foodItem = data.items[0];
-    const foodName = foodItem.name;
-    const calories = foodItem.calories;
-    const protein = foodItem.protein_g;
-    const fat = foodItem.fat_total_g;
-    const carbohydrates = foodItem.carbohydrates_total_g;
+      // Check if data is an array and not empty
+      if (Array.isArray(data.items) && data.items.length > 0) {
+        // Assuming the first item in the array contains the relevant data
+        const foodItem = data.items[0];
+        const foodName = foodItem.name;
+        const calories = foodItem.calories;
+        const protein = foodItem.protein_g;
+        const fat = foodItem.fat_total_g;
+        const carbohydrates = foodItem.carbohydrates_total_g;
 
-    // Construct result HTML with Bootstrap classes for styling
-    const resultHTML = `
-      <div class="card">
-        <div class="card-body">
-          <h2 class="card-title">${foodName}</h2>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Calories: ${calories}</li>
-            <li class="list-group-item">Protein: ${protein}g</li>
-            <li class="list-group-item">Fat: ${fat}g</li>
-            <li class="list-group-item">Carbohydrates: ${carbohydrates}g</li>
-          </ul>
-        </div>
-      </div>
-    `;
+        // Construct result HTML with Bootstrap classes for styling
+        const resultHTML = `
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">${foodName}</h2>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Calories: ${calories}</li>
+                <li class="list-group-item">Protein: ${protein}g</li>
+                <li class="list-group-item">Fat: ${fat}g</li>
+                <li class="list-group-item">Carbohydrates: ${carbohydrates}g</li>
+              </ul>
+            </div>
+          </div>
+        `;
 
-    // Display result HTML
-    resultDiv.innerHTML = resultHTML;
-    resultDiv.style.display = 'block'; // Show the result div
-  } else {
-    // Handle case where data is empty or not in the expected format
-    document.getElementById('error').style.display = 'block';
-    document.getElementById('error').textContent = 'No data available for the given query.';
-  }
-}
-
+        // Display result HTML
+        resultDiv.innerHTML = resultHTML;
+        resultDiv.style.display = 'block'; // Show the result div
+      } else {
+        // Handle case where data is empty or not in the expected format
+        document.getElementById('error').style.display = 'block';
+        document.getElementById('error').textContent = 'No data available for the given query.';
+      }
+    }
   </script>
 </body>
 </html>
