--- a/index.html
+++ b/index.html
@@ -8,8 +8,207 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="style1.css">
     <script src="script.js" defer></script>
+    <style>
+        .middle-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: auto;
+    margin-bottom: 200px;
+    padding: 20px;
+    background-color: rgba(231, 203, 181, 0.9); /* Set the background color with reduced opacity */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+
+        .search-form {
+            margin-top: 20px;
+        }
+
+        .search-form input[type="text"] {
+            width: 70%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            outline: none;
+            width: 500px;
+            height: 40px;
+        }
+
+        .search-form button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100px;
+            height: 40px;
+        }
+
+        .search-results {
+            display: none;
+            margin-top: 20px;
+        }
+
+        .footer {
+            background-color: #1a2939;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .footer .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .footer p {
+            margin: 0;
+            font-size: 14px;
+        }
+
+        .footer .footer-links {
+            list-style: none;
+            padding: 0;
+            margin: 10px 0 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        .footer .footer-links li {
+            display: inline;
+        }
+
+        .footer .footer-links a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        .footer .footer-links a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
+    <video autoplay muted loop id="video-background">
+    <source src="backgroundvideo.mp4" type="video/mp4">
+    <!-- Add additional video sources if needed -->
+    Your browser does not support the video tag.
+</video>
+
+
+    <div class="middle-box">
+    <!-- Content for the middle box -->
+    <h2>Welcome to CalorieTracker</h2>
+    <p>Track your calories and stay healthy!</p>
+    
+    <!-- Search bar -->
+    <form class="search-form" id="searchForm">
+        <input type="text" name="search" id="search" placeholder="Enter a food">
+        <button type="submit">Search</button>
+    </form>
+
+    <!-- Display box for search results -->
+    <div id="searchResults" class="search-results" style="display: none;">
+        <h3>Search Results</h3>
+        <div id="searchResultsContent"></div>
+    </div>
+</div>
+    
+<script>
+    // Function to fetch data from the API
+    function fetchDataFromAPI(query) {
+        // API endpoint and API key
+        const apiUrl = `https://api.calorieninjas.com/v1/nutrition?query=${encodeURIComponent(query)}`;
+        const apiKey = 'rpRUKhLZs24UEajq6D8eLA==pz6nVJb8Il6e7bog';
+
+        // Fetch data from the API
+        fetch(apiUrl, {
+            headers: {
+                'X-Api-Key': apiKey
+            }
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            displaySearchResults(data);
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            // Display error message in the search results box
+            document.getElementById('searchResultsContent').innerHTML = 'An error occurred. Please try again later.';
+            document.getElementById('searchResults').style.display = 'block';
+        });
+    }
+
+    // Function to display search results in the middle box
+    function displaySearchResults(data) {
+        const searchResultsContent = document.getElementById('searchResultsContent');
+
+        if (Array.isArray(data.items) && data.items.length > 0) {
+            // Clear previous search results
+            searchResultsContent.innerHTML = '';
+
+            // Display search results
+            data.items.forEach(item => {
+                const calories = item.calories;
+                const protein = item.protein_g;
+                const fat = item.fat_total_g;
+                const carbohydrates = item.carbohydrates_total_g;
+
+                // Create HTML elements for each search result
+                const resultItem = document.createElement('div');
+                resultItem.innerHTML = `
+                    <p>Calories: ${calories}</p>
+                    <p>Protein: ${protein}g</p>
+                    <p>Fat: ${fat}g</p>
+                    <p>Carbohydrates: ${carbohydrates}g</p>
+                `;
+                searchResultsContent.appendChild(resultItem);
+            });
+
+            // Show the search results box
+            document.getElementById('searchResults').style.display = 'block';
+        } else {
+            // Display message if no search results found
+            searchResultsContent.innerHTML = 'No search results found.';
+            document.getElementById('searchResults').style.display = 'block';
+        }
+    }
+
+    // Event listener for the search form submission
+    document.getElementById('searchForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent form submission
+
+        const query = document.getElementById('search').value.trim(); // Get the search query
+
+        if (query === '') {
+            alert('Please enter a search query.'); // Notify the user if the search query is empty
+            return;
+        }
+
+        // Fetch data from the API
+        fetchDataFromAPI(query);
+    });
+</script>
+
+
+
     <header>
         <nav class="navbar">
             <span class="hamburger-btn material-symbols-rounded">menu</span>
@@ -22,8 +221,8 @@
                 <li><a href="foodAPI.html">Food</a></li>
                 <li><a href="recipeAPI.html">Recipes</a></li>
                 <li><a href="caloriecounter.html">Calorie Calculator</a></li>
-            <li><a href="aboutus.html">About us</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="index2.html">Track</a></li>
             </ul>
             <button class="login-btn">LOG IN</button>
         </nav>
@@ -33,8 +232,7 @@
     <div class="form-popup">
         <span class="close-btn material-symbols-rounded">close</span>
         <div class="form-box login">
-            <div class="form-details">
-            </div>
+            <div class="form-details"></div>
             <div class="form-content">
                 <h2>LOGIN</h2>
                 <form action="#">
@@ -56,8 +254,7 @@
             </div>
         </div>
         <div class="form-box signup">
-            <div class="form-details">
-            </div>
+            <div class="form-details"></div>
             <div class="form-content">
                 <h2>SIGNUP</h2>
                 <form action="#">
@@ -72,7 +269,7 @@
                     <div class="policy-text">
                         <input type="checkbox" id="policy">
                         <label for="policy">
-                            I agree the
+                            I agree to the
                             <a href="#" class="option">Terms & Conditions</a>
                         </label>
                     </div>
@@ -85,5 +282,17 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 CalorieTracker. All rights reserved.</p>
+            <ul class="footer-links">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+<li><a href="http://Wa.me/+601111209906" target="_blank">Contact Us</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
